[package]
version = "0.2.3"
name = "synthlang-web"
repository = "https://github.com/rparrett/synthlang-web"
authors = ["Rob Parrett <rob.parrett@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.8.0"
synthlang = { path = "../synthlang" }
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_pcg = "0.2"
heck = "0.3"
itertools = "0.9"
version = "3.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
